<resources>
    <string name="app_name">Connexus</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="choose_from_library">Choose from your library</string>
    <string name="use_camera">Use camera</string>
    <string name="add_message_or_tags">Add a message and/or tags</string>
    <string name="upload_button_action">Upload</string>
    <string name="stream_title">Stream:</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="streams_back_button">Streams</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_out">Signed Out</string>
</resources>
